traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: too many arguments for method isInPosition: ()Boolean
  while(! isInPosition(x)) {
                      ^TraversalByColumn:18: error: not found: value x
  if ( (x -1 == getX()) && (0 == getY())) {return true}
        ^